# Sandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml  cmake-multi-platform.yml
applications/: CMakeLists.txt
applications/bowlingGame/: CMakeLists.txt  README.md  bowlingScreen.cpp  bowlingScreen.h
applications/bowlingGame/bowlingGameCMD/: CMakeLists.txt  bowlingScreen.cpp  bowlingScreen.h  console.cpp  screenTools.cpp  screenTools.h
applications/bowlingGame/bowlingGameUI/: CMakeLists.txt  display.cpp  display.h  display.ui  main.cpp
applications/designPattern/: CMakeLists.txt
applications/designPattern/CommandPattern/: CMakeLists.txt  Command.cpp  Command.h  README.md  main.cpp
applications/designPattern/ObserverPattern/: CMakeLists.txt  Observer.cpp  Observer.h  README.md  main.cpp
applications/designPattern/StatePattern/: CMakeLists.txt  State.cpp  State.h  main.cpp
applications/designPattern/build_monitoring/: CMakeLists.txt  README.md  constants.cpp  constants.h
applications/designPattern/ct_vs_rt/: CMakeLists.txt  README.md  const_versus_constexpr.cpp  constants.cpp  constants.h  main.cpp
applications/designPattern/metaprogramming/: CMakeLists.txt  README.md  const_versus_constexpr.cpp  constants.cpp  constexpr_tuple.cpp  construct_validation.cpp  ct_vs_rt.cpp  deep_non_typed_class_template.cpp  generic_lambda.cpp  lambda_valid.h  mpl_traits.cpp  non_typed_class_template.cpp  type_constraints.cpp  variant_type.cpp
applications/designPattern/mvc/: CMakeLists.txt  README.md  README.me  mvc.cpp
applications/designPattern/mvc_camera/: CMakeLists.txt  README.md  main.cpp
applications/utilities/: CMakeLists.txt
applications/utilities/csvParser/: CMakeLists.txt  csvParser.cpp  myCSVFile.csv
cmake/: BuildLocation.cmake  BuildUtils.cmake  Common.cmake  GTestSupport.cmake  QtSupport.cmake  TestUtils.cmake  libraryGenerator.cmake
libraries/: CMakeLists.txt
libraries/Codility/: CMakeLists.txt  README.md
libraries/Codility/include/Sandbox/Codility/: Codility.h
libraries/Codility/src/: Codility.cpp  Codility_impl.cpp  Codility_impl.h
libraries/Codility/test/src/: test_Codility.cpp
libraries/Core/: CMakeLists.txt
libraries/Core/include/Sandbox/Core/: Core.h
libraries/Core/src/: Core.cpp  Core_impl.cpp  Core_impl.h
libraries/Core/test/src/: test_Core.cpp
libraries/Gamebox/: CMakeLists.txt
libraries/Gamebox/include/Sandbox/Gamebox/: Gamebox.h  Sandbox_export.h
libraries/Gamebox/src/: Gamebox.cpp  Gamebox_impl.cpp  Gamebox_impl.h
libraries/Gamebox/test/src/: test_Gamebox.cpp
libraries/Geo/: CMakeLists.txt
libraries/Geo/include/Sandbox/Geo/: Geo.h
libraries/Geo/src/: Geo.cpp  Geo_impl.cpp  Geo_impl.h
libraries/Geo/test/src/: test_Geo.cpp
libraries/Pot/: CMakeLists.txt
libraries/Pot/include/Sandbox/Pot/: Conception.h  INIfile.h  Point.h  Pot.h
libraries/Pot/test/src/: test_Pot.cpp
libraries/Tools/: CMakeLists.txt
libraries/Tools/include/Sandbox/Tools/: Tools.h
libraries/Tools/src/: Tools.cpp  Tools_impl.cpp  Tools_impl.h
libraries/Tools/test/data/: iniFile.ini  iniFile_ill.ini
libraries/Tools/test/src/: test_Tools.cpp
template/: lib.h.in  lib_CMakeLists.txt.in
